Fix scrolling issue on mobile and desktop

--- a/my-frontend/src/components/common/Header/index.css
+++ b/my-frontend/src/components/common/Header/index.css
@@ -36,7 +36,6 @@
 }
 
 html, body {
-  overflow-x: hidden;
   max-width: 100%;
 }
 
